        com.sun.net.httpserver package available in JDK 6. Issue #381.
      - Moved org.restlet.ext.ssl into core org.restlet.engine.ssl package except
        classes related to the jSSLutils library now part of new org.restlet.ext.jsslutils
        extension and for CertificateAuthenticator class now in org.restlet.security.
        Solves issue #803 reported by Tal Liron.

- 2.2 Milestone 6 (12/05/2013)
    - Enhancements
      - Added a Message#bufferEntity() method to facilitate buffering of request and response
        entities/representations when they are transient but need to be consumed multiple times.
        Note that if not used properly, it can easily drain JVM memory.
      - Moved BufferingRepresentation from Engine to org.restlet.representation package.
      - Added client support for HTTP OAuth MAC authentication.
      - Added support of nowrap "deflater" (support of GZIP compatible compression), issue #786.
        Reported and contributed by Tal Liron.
    - Bug fixed
      - Fixed issue #789, declaration of gson's maven artifact identifier.
        Reported by mafuba.

- 2.2 Milestone 5 (09/07/2013)
    - Bug fixed
       - Fixed issues #774, #778 - Removed default support of JavaBeans XML-deserialization, 
         binary-deserialization on ObjectRepresentation class.
         Reported by David Jorm.

- 2.2 Milestone 4 (08/23/2013)
    - Enhancements
       - Added GSon extension (#586). Contributed by Neal Mi.
       - OAuth extension has been upgraded to support final OAuth 2.0 specification.
         Contributed by Shotaro Uchida.
    - Bug fixed
       - Fixed issue #739 - copy extension headers from JAX-RS api to restlet response.
         Reported by Mark Kharitonov.
       - Fixed issue #774 - Removed default support of JavaBeans XML-serialization.
         Reported by David Jorm, Dinis Cruz, Abraham Kang and Alvaro Munoz.
       - Fixed issue #778 - Removed default support of JavaBeans binary-serialization.